# infinython

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .editorconfig  .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.project_slug}}/scripts/: codeanalysis  codeformatting  test
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  {% if cookiecutter.typer == "yes" -%} __main__.py {%- endif %}  {% if cookiecutter.typer == "yes" -%} cli.py {%- endif %}
{{cookiecutter.project_slug}}/tests/: conftest.py
{{cookiecutter.project_slug}}/tests/{{cookiecutter.project_slug}}/: test_project_info.py
