[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.0.0"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.author}}"]
readme = "README.md"
packages = [
    {include="{{cookiecutter.project_slug}}", from="src"}
]
exclude = ["tests", "scripts"]

[tool.poetry.dependencies]
python = "~{{cookiecutter.python_version}}"
{% if cookiecutter.typer == "yes" -%}
typer = "0.9.0"
{%- endif %}

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.255"
black = "^23.1.0"
pylint = "^2.17.0"
mypy = "^1.1.1"
pre-commit = "^3.1.1"
autoflake = "^2.0.2"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

{% if cookiecutter.typer == "yes" -%}
[tool.poetry.scripts]
{{cookiecutter.project_slug}} = "{{cookiecutter.project_slug}}.__main__:main"
{%- endif %}

[tool.black]
line-length = 100

[tool.pylint.basic]
good-names = [
    "i", "j", "k", "ex", "Run", "_", # Default names that come from the pylint configuration.
    "x", "y", "z"
]

[tool.pylint.format]
# Compatibility with black (source: https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint)
max-line-length = 100

[tool.pylint.master]
ignore = [".git", ".venv", "scripts"]
ignore-patterns = "test_.*?py"

[tool.mypy]
files = ["src/{{cookiecutter.project_slug}}"]

[tool.ruff]
line-length = 100
target-version = "py{{cookiecutter.python_version|replace('.', '')}}"
fix = true
select = ["E", "F", "I"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --basetemp .pytest"

[tool.coverage.report]
show_missing = true
fail_under = 10

[tool.coverage.run]
source = ["src/{{cookiecutter.project_slug}}"]
